re-added the hover state on the path to purchase

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
@@ -46,6 +46,10 @@
 		cursor: pointer;
 		overflow: hidden;
 
+		@include hover() {
+			color: $colorLightGrey;
+		}
+
 		&:after {
 			@include size(1px, auto);
 			right: 0;
@@ -99,6 +103,10 @@
 		.step {
 			color: $colorPrimary;
 			height: 200%;
+
+			@include hover() {
+				color: $colorPrimary;
+			}
 
 			&:after {
 				opacity: 0;
