--- a/deploy/htdocs/version/src/inc/style/component/block/_block-article-teaser.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-article-teaser.scss
@@ -6,6 +6,7 @@
 	background: $colorWhite;
 	overflow: hidden;
 	backface-visibility: hidden;
+	transform: translate3d(0, 0, 0);
 
 	aside {
 		@include size(8 * $sizeGrid, 100%);
@@ -129,7 +130,7 @@
 			}
 
 			aside {
-				transform: translateX(calc(-100% - #{$sizeGrid}));
+				transform: translateX(-100%) translateX(-$sizeGrid);
 			}
 		}
 	}
@@ -173,8 +174,6 @@
 			}
 		}
 	}
-
-
 
 	@include respond-to(SMALL) {
 		@include size(100%, auto);
