Made sure the hero main height is enough to not let the secondary triangle overlap the next component
ready
#226

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
@@ -1,5 +1,6 @@
 .component-block-hero-main {
 	@include size(100%, 100vh);
+	min-height: $sizeGrid * 24; // Make sure the secondary triangle fit's in the block
 
 	&.has-statistics {
 
