re-added the subheading

--- a/deploy/htdocs/version/src/inc/script/app/component/slideout-panel/global-slideout-panel/contact/contact.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/slideout-panel/global-slideout-panel/contact/contact.html
@@ -1,5 +1,6 @@
 <form class="component-slideout-panel_contact" data-bind="with: data, submit: onSubmit" novalidate>
 
+	<h3 class="sub-title copy copy-01" data-bind="html: subHeading"></h3>
 	<h2 class="heading-06 heading" data-bind="html: heading"></h2>
 
 	<fieldset class="form-fields" data-bind="validateWith: $root.myValidator, validateOn : 'value'">
