--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-menu/button-menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-menu/button-menu.html
@@ -1,6 +1,9 @@
 <button class="component-button-menu button" data-bind="tap: handleClick, attr: { title: title }">
 	<span class="text">{{label}}</span>
 	<span class="seperator"></span>
-	<span class="icon" data-bind="visible: !data.menuButtonActive(),  icon: 'hamburger-menu'"></span>
-	<span class="icon" data-bind="visible: data.menuButtonActive(), icon: 'cross'"></span>
+	<span class="hamburger hamburger--spin js-hamburger" data-bind="css: {'is-active': data.menuButtonActive()}">
+		<div class="hamburger-box">
+			<div class="hamburger-inner"></div>
+		</div>
+	</span>
 </button>
