--- a/deploy/htdocs/version/src/inc/style/asset/_asset.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_asset.scss
@@ -14,6 +14,7 @@
 
 @import 'infinite-carousel/infinite-carousel';
 
-@import '_mapbox.scss';
-@import '_auto-complete.scss';
+@import 'mapbox.scss';
+@import 'auto-complete.scss';
+@import 'hamburger/hamburger';
 //@import 'grid';
