--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -119,3 +119,7 @@
 @import "market-search";
 @import "video-controls";
 @import "block/block-map-tertiary";
+@import "map-pagination";
+
+@import "block-map-tertiary-slide/abstract_slide";
+@import "block-map-tertiary-slide/slide-radial-progress";
