--- a/deploy/htdocs/version/src/inc/style/component/block/_block-map-tertiary.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-map-tertiary.scss
@@ -1,13 +1,21 @@
 .component-block-map-tertiary {
 	position: relative;
 
-	.slides {
-		@include aspect-ratio(1100px, 550px);
+	.background {
+		background-size: cover;
+	}
+
+	.slide-wrapper {
 		width: calc(100% - #{$sizeGrid * 3});
 		margin-left: $sizeGrid * 3;
 	}
 
-	.slide {
+	.slides {
+		@include aspect-ratio(1100px, 550px);
 		background: $colorLightGrey
+	}
+
+	.slide {
+
 	}
 }
