Update the logo ready #254

--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -3,8 +3,7 @@
 	<h1 class="logo" data-bind="
 		gaiaGoto: [Branches.CONTENT_PAGE, 'home'],
 		css: {
-			'primary': !$root.enableSolidBackground(),
-			'inverted': $root.enableSolidBackground()
+			'enable-solid-background': $root.enableSolidBackground()
 		}"> <!-- 'primary' or 'inverted' -->
 		<span class="icon" data-bind="icon: 'logo'"></span>
 	</h1>
