Refactor to the percentage loader to be re-usable

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
@@ -42,7 +42,7 @@
 								name: 'percentage-loader',
 								onComplete: $root.controller.callbackCounter.get(),
 								options: {
-									percentage: $data.value
+									value: $data.value
 								}
 							} --><!-- /ko -->
 						</div>
