--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-radial-progress/slide-radial-progress.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-radial-progress/slide-radial-progress.html
@@ -5,11 +5,22 @@
 	</header>
 
 	<div class="slide-statistics abs-center" data-bind="foreach: data.slideData.statistics">
-		<div class="statistic"></div>
+		<div class="statistic">
+			<!-- ko component: {
+				name: 'percentage-loader',
+				onComplete: $root.controller.callbackCounter.get(),
+				options: {
+					value: $data.value,
+					borderType: $root.PercentageLoaderBorderType.DASHED
+				}
+			} --><!-- /ko -->
+			<span class="label copy copy-02 " data-bind="html: $data.label"></span>
+		</div>
 	</div>
 
 	<div class="slide-title">
-		<span class="pagination-number" data-bind="html: $root.StringUtils.padLeft((data.index + 1).toString(), 2, '0')"></span>
+		<span class="pagination-number"
+		      data-bind="html: $root.StringUtils.padLeft((data.index + 1).toString(), 2, '0')"></span>
 		<h3 class="heading heading-01" data-bind="html: data.slideData.heading"></h3>
 	</div>
 </div>
