--- a/deploy/htdocs/version/src/inc/script/app/component/percentage-loader/percentage-loader.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/percentage-loader/percentage-loader.html
@@ -1,20 +1,19 @@
 <div class="component-percentage-loader">
-	<div class="svg-holder">
+	<div class="svg-holder" data-bind="css: {
+		'is-solid': data.borderType === $root.PercentageLoaderBorderType.SOLID,
+		'is-dashed': data.borderType === $root.PercentageLoaderBorderType.DASHED
+	}">
 		<svg id="svg" class="svg" viewBox="0 0 500 500" width="100%" height="100%" preserverAspectRatio='xMinYMin meet'>
 
 			<circle class="animated-line-track" cx="250" cy="250" r="230" stroke="#31353b" stroke-width="4"
 			        fill="transparent" vector-effect="non-scaling-stroke"/>
 			</circle>
-
 			<!--ANIMATE LINE-->
 			<circle class="animated-line" cx="250" cy="250" r="230" stroke="#47aa42" stroke-width="20" fill="transparent"
 			        transform="rotate(-90, 250, 250)"  />
 			</circle>
-
 		</svg>
 
-		<div class="amount-info">
-			{{amount()}}%
-		</div>
+		<div class="amount-info" data-bind="html: label"></div>
 	</div>
 </div>
