--- a/deploy/htdocs/version/src/inc/style/component/_percentage-loader.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_percentage-loader.scss
@@ -11,6 +11,12 @@
 			width: 100%;
 			height: 100%;
 		}
+
+		&.is-dashed {
+			.animated-line-track {
+				stroke-dasharray: 5, 5;
+			}
+		}
 	}
 
 	.animated-line-track {
