Add the horizontal with icon slide for desktop

--- a/deploy/htdocs/version/src/inc/style/component/_component.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_component.scss
@@ -123,3 +123,6 @@
 
 @import "block-map-tertiary-slide/abstract_slide";
 @import "block-map-tertiary-slide/slide-radial-progress";
+@import "block-map-tertiary-slide/slide-horizontal-with-icon";
+@import "block-map-tertiary-slide/slide-horizontal-without-icon";
+@import "block-map-tertiary-slide/slide-vertical-graphic";
