--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_abstract_slide.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_abstract_slide.scss
@@ -7,7 +7,7 @@
 		padding: 0 $sizeGrid * 2;
 		position: absolute;
 		text-align: center;
-		color: $colorPrimary;
+		color: $colorLocalMedia;
 	}
 
 	.slide-statistics {
