--- a/deploy/htdocs/version/src/inc/style/type/_copy.scss
+++ b/deploy/htdocs/version/src/inc/style/type/_copy.scss
@@ -3,10 +3,12 @@
 	font: 400 1.8rem / 1.625 $fontOpenSans;
 }
 
+%copy-02,
 .copy-02 {
 	font: 600 1.6rem / 1.5 $fontOpenSans;
 }
 
+%copy-03,
 .copy-03 {
 	font: 400 1.5rem / 1.6 $fontOpenSans;
 }
