Add vertical graphic component

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-horizontal-with-icon/slide-horizontal-with-icon.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-horizontal-with-icon/slide-horizontal-with-icon.html
@@ -1,4 +1,4 @@
-<div class="map-tertiary-slide component-slide-horizontal-with-icon">
+<div class="map-tertiary-slide abs-fill component-slide-horizontal-with-icon">
 	<header class="slide-heading">
 		<h2 class="heading heading-07"><strong data-bind="html: data.slideData.subHeading"></strong></h2>
 		<p class="copy copy-03" data-bind="html: data.slideData.paragraph"></p>
