--- a/deploy/htdocs/version/src/inc/style/component/_vertical-graphic.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_vertical-graphic.scss
@@ -22,4 +22,10 @@
 		color: $colorLocalMedia;
 		margin-bottom: 1rem;
 	}
+
+	@include respond-to(SMALL){
+		.bar-wrapper {
+			height: $sizeGrid * 10;
+		}
+	}
 }
