--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-vertical-graphic.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-vertical-graphic.scss
@@ -47,4 +47,19 @@
 			color: $colorSecondary;
 		}
 	}
+
+	@include respond-to(SMALL) {
+		display: block;
+
+		.slide-statistics {
+			@include pos(auto, auto, auto, auto);
+			position: relative;
+			transform: none;
+			margin-top: $sizeGrid
+		}
+
+		.statistic {
+			@include size(25%, auto);
+		}
+	}
 }
